--- a/css/style2.css
+++ b/css/style2.css
@@ -1,83 +1,89 @@
-
-
 body {
-    font-family: Arial, sans-serif;
-     /* background-color: #2d0f4a;  */
-     background: linear-gradient(to left, #270d3e, #7c5ebc);
+  font-family: Arial, sans-serif;
+
+  background: linear-gradient(to left, #270d3e, #7c5ebc);
 }
 
 .container {
-    max-width: 600px; 
-     margin: 20px ; 
-    background-color: #dad7f7;
-     padding: 20px; 
-    border-radius: 30px; 
-    box-shadow: 8px 8px 8px  rgba(232, 192, 249, 0.3);
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
+  max-width: 600px;
+  margin-bottom: 20px;
+  margin-top: 4px;
+  background-color: #dad7f7;
+  padding: 20px;
+  border-radius: 30px;
+  box-shadow: 8px 8px 8px rgba(232, 192, 249, 0.3);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
 }
+
 fieldset {
-   
-    background-color: white;
-    border-radius: 20px;
-    margin-top: 40px;
+
+  background-color: white;
+  border-radius: 20px;
+  margin-top: 40px;
   margin-bottom: 33px;
   flood-color: #321050;
-  
+
 }
 
 
 
-  .btn-warning{
-    background-color: black;
-    color: #dad7f7;
-    
-    top: 493.2px;
-    
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 15%;
-    font-size: large;
-    left: 259.85px;
-  
-  right: 283px;
+.btn-warning {
+
+
+  background-color: black;
+
+  color: #dad7f7;
+
+
+  border-radius: 15%;
+  font-size: large;
+
+  border-bottom-width: 4.6px;
+  border-bottom-style: solid;
+  border-right-width: 4.6px;
+  border-right-style: solid;
+
+
   border-color: #2d0f4a;
-  margin-left: 258px;
-  
-}
-    
-  
-  .btn-warning:hover {
-    color: #2d0f4a;
-    background-color: #ffcd2a;
-    border-color: #ffdc6b;
-  }
-  
-  input[type="radio"] {
-    accent-color: #ffcd2a; 
+
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 14px;
+  padding-left: 17px;
+  margin-left: 267px;
+  margin-right: 241px;
+  margin-bottom: 7px;
+  margin-top: 7px;
+
+  min-height: fit-content;
+  max-width: auto;
+  position: static;
+
 }
 
-img{
-   
-    width: 624px;
+
+.btn-warning:hover {
+  color: #2d0f4a;
+  background-color: #ffcd2a;
+  border-color: #ffdc6b;
+}
+
+input[type="radio"] {
+  accent-color: #ffcd2a;
+}
+
+img {
+
+  width: 624px;
   height: 573px;
-    /* margin-top: -494px ; 
-    
-    margin-right: 1070px ;
-    
-    margin-left: -82px ;
-    padding-left: 0px ;
-   
-    padding-bottom: 4px ; */
- 
 
-position: fixed;
-bottom: 0;
-left: 0;
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
